--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!--
 Paul Scott
-24 March 2019
+25 March 2019
 
 Project page for pjs4.com
 -->
@@ -82,47 +82,14 @@ Project page for pjs4.com
   <p class="section_title"> Featured Projects: </p>
   <div class="row">
 
-    <!-- siliconeight javascript -->
-    <a class="project_div" href="https://pjs4.com/SiliconEight-Javascript"
-       style="background: url('img/projects/silicon_javascript.jpg') center;
-                       background-size: cover" target="_blank">
-      <div class="project_text">
-        <p> SiliconEight (Web) </p>
-      </div>
-    </a>
-
-    <!-- siliconeight -->
-    <a class="project_div" href="https://pjs4.com/SiliconEight"
-       style="background: url('img/projects/silicon.jpg');
-                   background-size: cover" target="_blank">
-      <div class="project_text">
-        <p> SiliconEight (Kotlin) </p>
-      </div>
-    </a>
-  </div>
-
-  <div class="row">
-
     <!-- convex hull web -->
     <a class="project_div" href="https://pjs4.com/Convex-Hull-Web"
        style="background: url('img/projects/convex.jpg') center top;
                        background-size: cover" target="_blank">
       <div class="project_text">
-        <p> Convex Hull (Web) </p>
+        <p> Convex Hull Visualizer </p>
       </div>
     </a>
-
-    <!-- tetrik -->
-    <a class="project_div" href="https://github.com/PScottZero/TetriK"
-       style="background: url('img/projects/tetrik.jpg') center top;
-                       background-size: cover" target="_blank">
-      <div class="project_text">
-        <p> Tetrik </p>
-      </div>
-    </a>
-  </div>
-
-  <div class="row">
 
     <!-- paul's horrible drawings -->
     <a class="project_div" href="https://pjs4.com/Pauls-Horrible-Drawings"
@@ -132,13 +99,25 @@ Project page for pjs4.com
         <p> Paul's Horrible Drawings </p>
       </div>
     </a>
+  </div>
 
-    <!-- pi cipher -->
-    <a class="project_div" href="https://pjs4.com/Pi-Cipher"
-       style="background: url('img/projects/picipher.jpg') center top;
+  <div class="row">
+
+    <!-- siliconeight javascript -->
+    <a class="project_div" href="https://pjs4.com/SiliconEight-Javascript"
+       style="background: url('img/projects/silicon_javascript.jpg') center;
                        background-size: cover" target="_blank">
       <div class="project_text">
-        <p> π-cipher </p>
+        <p> SiliconEight </p>
+      </div>
+    </a>
+
+    <!-- tetromino -->
+    <a class="project_div" href="https://pjs4.com/Tetromino"
+       style="background: url('img/projects/tetromino.jpg') center top;
+                       background-size: cover" target="_blank">
+      <div class="project_text">
+        <p> Tetromino </p>
       </div>
     </a>
   </div>
@@ -261,6 +240,18 @@ Project page for pjs4.com
       </div>
     </a>
 
+    <!-- siliconeight -->
+    <a class="project_div" href="https://pjs4.com/SiliconEight"
+       style="background: url('img/projects/silicon.jpg');
+                   background-size: cover" target="_blank">
+      <div class="project_text">
+        <p> SiliconEight (Kotlin) </p>
+      </div>
+    </a>
+  </div>
+
+  <div class="row">
+
     <!-- stp ground -->
     <a class="project_div" href="https://github.com/PScottZero/STP-Ground"
        style="background: url('img/projects/stp.jpg');
@@ -269,9 +260,6 @@ Project page for pjs4.com
         <p> STP Ground </p>
       </div>
     </a>
-  </div>
-
-  <div class="row">
 
     <!-- terminal enigma -->
     <a class="project_div" href="https://github.com/PScottZero/TerminalEnigma"
@@ -281,11 +269,23 @@ Project page for pjs4.com
         <p> Terminal Enigma </p>
       </div>
     </a>
+  </div>
+
+  <div class="row">
+
+    <!-- tetrik -->
+    <a class="project_div" href="https://github.com/PScottZero/TetriK"
+       style="background: url('img/projects/tetrik.jpg') center top;
+                         background-size: cover" target="_blank">
+      <div class="project_text">
+        <p> TetriK </p>
+      </div>
+    </a>
 
     <!-- toxicity -->
     <a class="project_div" href="https://github.com/PScottZero/Toxicity-HackPSU-Fall2018"
        style="background: url('img/projects/toxicity.jpg') center;
-                       background-size: cover" target="_blank">
+                         background-size: cover" target="_blank">
       <div class="project_text">
         <p> Toxicity </p>
       </div>
