--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!--
 Paul Scott
-24 March 2019
+26 March 2019
 
 About page for pjs4.com
 -->
@@ -61,14 +61,14 @@ About page for pjs4.com
 
     <!-- link to resume [External: Google Drive] -->
     <div class="link_container">
-      <a href="https://drive.google.com/open?id=1Z79TNs30ttAftoWwJbqm93X77OljiM3L" target="_blank">
+      <a href="https://drive.google.com/open?id=1Z79TNs30ttAftoWwJbqm93X77OljiM3L">
         <img alt="Resume" src="img/icons/icon_resume.svg">
       </a>
     </div>
 
     <!-- link to linkedin [External: LinkedIn] -->
     <div class="link_container">
-      <a href="https://www.linkedin.com/in/paul-scott-047858140/" target="_blank">
+      <a href="https://www.linkedin.com/in/paul-scott-047858140/">
         <img alt="LinkedIn" src="img/icons/icon_linkedin.svg">
       </a>
     </div>
@@ -240,7 +240,7 @@ About page for pjs4.com
   <p class="section_title"> Hackathons: </p>
   <div class="row">
     <div class="data_div">
-      <!-- image from https://en.wikipedia.org/ -->
+      <!-- image from https://acm.psu.edu/codepsu/ -->
       <img alt="CodePSU Logo" src="img/hack_icons/codepsu.png">
       <p><b>CodePSU</b> <br> Spring 2019 </p>
     </div>
@@ -305,7 +305,7 @@ About page for pjs4.com
 <!-- website footer -->
 <div id="footer">
   <p>Created by Paul Scott with HTML and CSS</p>
-  <p>Last Updated 24 March 2019</p>
+  <p>Last Updated 26 March 2019</p>
 </div>
 </body>
 </html>
