--- a/projects.html
+++ b/projects.html
@@ -1,6 +1,6 @@
 <!--
 Paul Scott
-25 March 2019
+26 March 2019
 
 Project page for pjs4.com
 -->
@@ -61,14 +61,14 @@ Project page for pjs4.com
 
     <!-- link to resume [External: Google Drive] -->
     <div class="link_container">
-      <a href="https://drive.google.com/open?id=1Z79TNs30ttAftoWwJbqm93X77OljiM3L" target="_blank">
+      <a href="https://drive.google.com/open?id=1Z79TNs30ttAftoWwJbqm93X77OljiM3L">
         <img alt="Resume" src="img/icons/icon_resume.svg">
       </a>
     </div>
 
     <!-- link to linkedin [External: LinkedIn] -->
     <div class="link_container">
-      <a href="https://www.linkedin.com/in/paul-scott-047858140/" target="_blank">
+      <a href="https://www.linkedin.com/in/paul-scott-047858140/">
         <img alt="LinkedIn" src="img/icons/icon_linkedin.svg">
       </a>
     </div>
@@ -85,7 +85,7 @@ Project page for pjs4.com
     <!-- convex hull web -->
     <a class="project_div" href="https://pjs4.com/Convex-Hull-Web"
        style="background: url('img/projects/convex.jpg') center top;
-                       background-size: cover" target="_blank">
+                       background-size: cover">
       <div class="project_text">
         <p> Convex Hull Visualizer </p>
       </div>
@@ -94,7 +94,7 @@ Project page for pjs4.com
     <!-- paul's horrible drawings -->
     <a class="project_div" href="https://pjs4.com/Pauls-Horrible-Drawings"
        style="background: url('img/projects/phd.jpg') center top;
-                       background-size: cover" target="_blank">
+                       background-size: cover">
       <div class="project_text">
         <p> Paul's Horrible Drawings </p>
       </div>
@@ -106,7 +106,7 @@ Project page for pjs4.com
     <!-- siliconeight javascript -->
     <a class="project_div" href="https://pjs4.com/SiliconEight-Javascript"
        style="background: url('img/projects/silicon_javascript.jpg') center;
-                       background-size: cover" target="_blank">
+                       background-size: cover">
       <div class="project_text">
         <p> SiliconEight </p>
       </div>
@@ -115,7 +115,7 @@ Project page for pjs4.com
     <!-- tetromino -->
     <a class="project_div" href="https://pjs4.com/Tetromino"
        style="background: url('img/projects/tetromino.jpg') center top;
-                       background-size: cover" target="_blank">
+                       background-size: cover">
       <div class="project_text">
         <p> Tetromino </p>
       </div>
@@ -129,7 +129,7 @@ Project page for pjs4.com
     <!-- apogee artist -->
     <a class="project_div" href="https://github.com/PScottZero/Apogee-Artist"
        style="background: url('img/projects/apogee.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> Apogee Artist </p>
       </div>
@@ -138,7 +138,7 @@ Project page for pjs4.com
     <!-- bitwise game maker -->
     <a class="project_div" href="https://github.com/PScottZero/Bitwise-Game-Maker"
        style="background: url('img/projects/bitwise.jpg') center;
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> Bitwise Game Maker </p>
       </div>
@@ -150,7 +150,7 @@ Project page for pjs4.com
     <!-- conway's game of life -->
     <a class="project_div" href="https://github.com/PScottZero/Conways-Game-of-Life"
        style="background: url('img/projects/conway.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> Conway's Game of Life </p>
       </div>
@@ -159,7 +159,7 @@ Project page for pjs4.com
     <!-- easton coach driver report -->
     <a class="project_div" href="https://github.com/PScottZero/Easton-Coach-Driver-Report"
        style="background: url('img/projects/easton.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> Easton Coach Driver Report </p>
       </div>
@@ -171,7 +171,7 @@ Project page for pjs4.com
     <!-- exgraph -->
     <a class="project_div" href="https://github.com/PScottZero/ExGraph"
        style="background: url('img/projects/exgraph.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> ExGraph </p>
       </div>
@@ -180,7 +180,7 @@ Project page for pjs4.com
     <!-- the hypothetical computer -->
     <a class="project_div" href="https://github.com/PScottZero/The-Hypothetical-Computer"
        style="background: url('img/projects/hypo.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> The Hypothetical Computer </p>
       </div>
@@ -192,7 +192,7 @@ Project page for pjs4.com
     <!-- java paint -->
     <a class="project_div" href="https://github.com/PScottZero/JavaPaint"
        style="background: url('img/projects/javapaint.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> Java Paint </p>
       </div>
@@ -201,7 +201,7 @@ Project page for pjs4.com
     <!-- lucas lehmer primality test -->
     <a class="project_div" href="https://github.com/PScottZero/Lucas-Lehmer-Test-Kotlin"
        style="background: url('img/projects/lucas.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> Lucas-Lehmer Primality Test </p>
       </div>
@@ -213,7 +213,7 @@ Project page for pjs4.com
     <!-- metar decoder -->
     <a class="project_div" href="https://github.com/PScottZero/METAR-Decoder"
        style="background: url('img/projects/metar.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> METAR Decoder </p>
       </div>
@@ -222,7 +222,7 @@ Project page for pjs4.com
     <!-- metar decoder -->
     <a class="project_div" href="https://github.com/PScottZero/PythonPunchcard"
        style="background: url('img/projects/punchcard.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> Python Punchcard </p>
       </div>
@@ -234,7 +234,7 @@ Project page for pjs4.com
     <!-- recaman sequence visualizer -->
     <a class="project_div" href="https://github.com/PScottZero/Recaman-Sequence-Visualizer"
        style="background: url('img/projects/recaman.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> Recam&aacuten Series Visualizer </p>
       </div>
@@ -243,7 +243,7 @@ Project page for pjs4.com
     <!-- siliconeight -->
     <a class="project_div" href="https://pjs4.com/SiliconEight"
        style="background: url('img/projects/silicon.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> SiliconEight (Kotlin) </p>
       </div>
@@ -255,7 +255,7 @@ Project page for pjs4.com
     <!-- stp ground -->
     <a class="project_div" href="https://github.com/PScottZero/STP-Ground"
        style="background: url('img/projects/stp.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> STP Ground </p>
       </div>
@@ -264,7 +264,7 @@ Project page for pjs4.com
     <!-- terminal enigma -->
     <a class="project_div" href="https://github.com/PScottZero/TerminalEnigma"
        style="background: url('img/projects/enigma.jpg');
-                   background-size: cover" target="_blank">
+                   background-size: cover">
       <div class="project_text">
         <p> Terminal Enigma </p>
       </div>
@@ -276,7 +276,7 @@ Project page for pjs4.com
     <!-- tetrik -->
     <a class="project_div" href="https://github.com/PScottZero/TetriK"
        style="background: url('img/projects/tetrik.jpg') center top;
-                         background-size: cover" target="_blank">
+                         background-size: cover">
       <div class="project_text">
         <p> TetriK </p>
       </div>
@@ -285,7 +285,7 @@ Project page for pjs4.com
     <!-- toxicity -->
     <a class="project_div" href="https://github.com/PScottZero/Toxicity-HackPSU-Fall2018"
        style="background: url('img/projects/toxicity.jpg') center;
-                         background-size: cover" target="_blank">
+                         background-size: cover">
       <div class="project_text">
         <p> Toxicity </p>
       </div>
@@ -296,7 +296,7 @@ Project page for pjs4.com
 <!-- website footer -->
 <div id="footer">
   <p>Created by Paul Scott with HTML and CSS</p>
-  <p>Last Updated 24 March 2019</p>
+  <p>Last Updated 26 March 2019</p>
 </div>
 </body>
 </html>
