--- a/projects.html
+++ b/projects.html
@@ -82,12 +82,12 @@ Project page for pjs4.com
   <p class="section_title"> Featured Projects: </p>
   <div class="row">
 
-    <!-- convex hull web -->
+    <!-- graham scan visualizer -->
     <a class="project_div" href="https://pjs4.com/Convex-Hull-Web"
        style="background: url('img/projects/convex.jpg') center top;
                        background-size: cover">
       <div class="project_text">
-        <p> Convex Hull Visualizer </p>
+        <p> Graham Scan Visualizer </p>
       </div>
     </a>
 
