--- a/projects.html
+++ b/projects.html
@@ -83,7 +83,7 @@ Project page for pjs4.com
   <div class="row">
 
     <!-- graham scan visualizer -->
-    <a class="project_div" href="https://pjs4.com/Convex-Hull-Web"
+    <a class="project_div" href="https://pjs4.com/Graham-Scan"
        style="background: url('img/projects/convex.jpg') center top;
                        background-size: cover">
       <div class="project_text">
