--- a/index.html
+++ b/index.html
@@ -9,5 +9,5 @@
 <link rel="stylesheet" href="styles.fc3a4454634f177bc92b.css"></head>
 <body>
   <app-root></app-root>
-<script src="runtime-es2015.703a23e48ad83c851e49.js" type="module"></script><script src="polyfills-es2015.7a264d14fd7126ba8db0.js" type="module"></script><script src="runtime-es5.465c2333d355155ec5f3.js" nomodule></script><script src="polyfills-es5.03d8c9fc4ed8e610412b.js" nomodule></script><script src="main-es2015.f4be5b3cb3b3dd511d3d.js" type="module"></script><script src="main-es5.d59d77ca1a2105a892d2.js" nomodule></script></body>
+<script src="runtime-es2015.edb2fcf2778e7bf1d426.js" type="module"></script><script src="runtime-es5.edb2fcf2778e7bf1d426.js" nomodule defer></script><script src="polyfills-es5.f067f5f913bead2cd167.js" nomodule defer></script><script src="polyfills-es2015.25ff13674b3056b14f77.js" type="module"></script><script src="main-es2015.f5d402fc6678a4ac9216.js" type="module"></script><script src="main-es5.f5d402fc6678a4ac9216.js" nomodule defer></script></body>
 </html>
