--- a/src/index.html
+++ b/src/index.html
@@ -1,15 +1,19 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Paul Joseph Scott IV</title>
-  <base href="pscottzero.github.io">
+  <head>
+    <meta charset="utf-8" />
+    <title>Paul Joseph Scott IV</title>
+    <base href="pscottzero.github.io" />
 
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg">
-  <link rel="alternate icon" type="image/x-icon" href="assets/icons/favicon.ico">
-</head>
-<body>
-  <app-root></app-root>
-</body>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" type="image/svg+xml" href="assets/icons/favicon.svg" />
+    <link
+      rel="alternate icon"
+      type="image/x-icon"
+      href="assets/icons/favicon.ico"
+    />
+  </head>
+  <body>
+    <app-root></app-root>
+  </body>
 </html>
