--- a/src/index.html
+++ b/src/index.html
@@ -14,6 +14,8 @@
     />
   </head>
   <body>
-    <app-root></app-root>
+    <div id="background">
+      <app-root></app-root>
+    </div>
   </body>
 </html>
